syntax = "proto3";

option csharp_namespace = "GrpcSecureAuth";

service AuthService {
  rpc Authenticate (AuthRequest) returns (AuthResponse);
  rpc GetProfile (ProfileRequest) returns (ProfileResponse);
}

message AuthRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
  string message = 2;
}

message ProfileRequest {
  string token = 1;
}

message ProfileResponse {
  string name = 1;
  int32 age = 2;
  string email = 3;
}